--- a/bankingapp/templates/services.html
+++ b/bankingapp/templates/services.html
@@ -56,11 +56,76 @@
         <div class="what_we_do_section_2">
           <div class="row">
           <div class="col-sm-8">
-              <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Create Account</button>
-              </form>
+            <form id="applicationForm" method="post">
+              {% csrf_token %}
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="name" required><br>
+      
+              <label for="dob">Date of Birth:</label>
+              <input type="date" id="dob" name="dob" required><br>
+      
+              <label for="age">Age:</label>
+              <input type="number" id="age" name="age" required><br>
+      
+              <label for="gender">Gender:</label>
+              <select id="gender" name="gender" required>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                  <option value="other">Other</option>
+              </select><br>
+      
+              <label for="phone">Phone Number:</label>
+              <input type="tel" id="phone" name="phone" required><br>
+      
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required><br>
+      
+              <label for="address">Address:</label>
+              <textarea id="address" name="address" required></textarea><br>
+      
+              <label for="district">District:</label>
+              <select id="district" name="district" required>
+                  <option value="district">Select District</option>
+                  <option value="Thiruvananthapuram">Thiruvananthapuram</option>
+                  <!-- <option value="district2">Kollam</option>
+                  <option value="district3">Pathanamthitta</option>
+                  <option value="district4">Alapuzha</option> -->
+                  <option value="Kottayam">Kottayam</option>
+                  <option value="Idukki">Idukki</option>
+                  <option value="Eranakulam">Eranakulam</option>
+                  <!-- <option value="district8">Thrissur</option>
+                  <option value="district9">Palakkad</option>
+                  <option value="district10">Malappuram</option> -->
+                  <option value="Kozhikode">Kozhikode</option>
+                  <!-- <option value="district12">Wayanad</option>
+                  <option value="district13">Kannur</option>
+                  <option value="district14">Kasaragod</option> -->
+              
+                  <!-- Add other districts as options -->
+              </select><br>
+      
+              <label for="branch">Branch:</label>
+              <select id="branch" name="branch" required>
+                  <!-- Options will be populated dynamically based on district selection using JavaScript -->
+              </select><br>
+      
+              <label for="accountType">Account Type:</label>
+              <select id="accountType" name="accountType" required>
+                  <option value="savings">Savings Account</option>
+                  <option value="current">Current Account</option>
+                  <!-- Add other account types as options -->
+              </select><br>
+      
+              <label>Materials Provide:</label><br>
+              <input type="checkbox" id="debitCard" name="materials" value="debitCard">
+              <label for="debitCard">Debit Card</label><br>
+              <input type="checkbox" id="creditCard" name="materials" value="creditCard">
+              <label for="creditCard">Credit Card</label><br>
+              <input type="checkbox" id="chequeBook" name="materials" value="chequeBook">
+              <label for="chequeBook">Cheque Book</label><br>
+      
+              <input type="submit" value="Submit">
+          </form>
           </div>
           <div class="col-md-4">
             <div><img src="{% static 'images/img-1.png' %}" class="image_1"></div>
@@ -110,5 +175,32 @@
     <!-- javascript --> 
     <script src="js/owl.carousel.js"></script>
     <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script> 
+    <script>
+      document.getElementById("district").addEventListener("change", function() {
+          var district = this.value;
+          var branchSelect = document.getElementById("branch");
+          // Clear existing options
+          branchSelect.innerHTML = "";
+          // Populate branches based on the selected district
+          if (district === "Thiruvananthapuram") {
+              var branches = ["Karyavattom"]; //  branches for district1
+          } else if (district === "Kottayam") {
+              var branches = ["Pala", "Erattupetta", "Kanjirappaly"]; //  branches for district2
+          } else if (district === "Idukki") {
+              var branches = ["Thodupuzha", "Kattapana"]; //  branches for district2
+          } else if (district === "Eranakulam") {
+              var branches = ["Kalamassery"]; //  branches for district2
+          } else if (district === "Kozhikode") {
+              var branches = ["Vadakara", "Nadapuram", "Nadakkav"]; //  branches for district2
+          }
+          // Add branch options to the select element
+          branches.forEach(function(branch) {
+              var option = document.createElement("option");
+              option.text = branch;
+              option.value = branch;
+              branchSelect.add(option);
+          });
+      });
+    </script>
 </body>
 </html>
